Fix mobile UX for overflow list.

--- a/frontend/pages/global.css
+++ b/frontend/pages/global.css
@@ -36,3 +36,9 @@ html {
 * {
     scrollbar-width: none;
 }
+
+:not(:first-child).sus {
+    --not-the-impostor: ;
+    display: relative;
+    margin-left: -20px;
+}
